[package]
name = "v9_worker"
version = "0.1.0"
authors = ["Gregor Peach <gregorpeach@gmail.com>"]
license = "MIT"
description = "The worker node application code for the velocity-9 serverless platform"
repository = "https://github.com/velocity-9/v9_worker"
keywords = ["cloud", "rust", "serverless"]
categories = ["serverless"]
readme = "README.md"
edition = "2018"

[dependencies]
failure = { version = "0.1.6", features = ["derive"] }
flexi_logger = "0.14.4"
hyper = "0.12.35"
lazy_static = "1.4"
log = "0.4.8"
nix = "0.15.0"
parking_lot = "0.9.0"
percent-encoding = "2.1"
rand = "0.7.2"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subprocess = "0.1.18"
systemstat = "0.1.5"
tempfile = "3.1"
